--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=api-giret-resources
 server.port=8085
-api.giret.base-url = http://52.54.77.191:8081
+
+##APIS GIRET
+api.giret.resouce.base.url = http://52.54.77.191:8081
+api.giret.resouce.historical.base.url = http://52.54.77.191:8081
