fix update resouce

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8085
 ##APIS GIRET
 api.giret.resouce.base.url = http://52.54.77.191:8081
 api.giret.resouce.historical.base.url = http://52.54.77.191:8082
+api.giret.loan.base.url = http://52.54.77.191:8083
