--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ api.giret.resource.base.url = http://52.54.77.191:8081
 api.giret.resource.historical.base.url = http://52.54.77.191:8082
 api.giret.loan.base.url = http://52.54.77.191:8083
 api.giret.document.base.url = http://52.54.77.191:8084
+
+
+#APIS FUNCTION AZURE
+azure.function.base-url=https://faas-giret-producer-a2hnf7fpcrd9b8ff.eastus2-01.azurewebsites.net
