--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ api.giret.document.base.url = http://52.54.77.191:8084
 
 
 #APIS FUNCTION AZURE
-azure.function.base-url=https://faas-giret-producer-a2hnf7fpcrd9b8ff.eastus2-01.azurewebsites.net
+azure.function.base.url=https://faas-giret-producer-a2hnf7fpcrd9b8ff.eastus2-01.azurewebsites.net
+azure.function.updateResource.key = pwnC7sD3rHHat1g091BeBM3l1DM0gzFv_Z5FSiN1P-1UAzFuCZH3dA==
